--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 	</body>
 	<script>
 		function ShowPos(){
-			position = navigator.geolocation.getCurrentPosition(app.onSuccess, app.onError, options);
+			var position = navigator.geolocation.getCurrentPosition(app.onSuccess, app.onError, options);
 			alert(position.coords.latitude);
 		}
 		var Sun1=new Sun("#sun", "#wrap", 2);
