--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 				font-family:Century Gothic;
 				transition:.3s;
 			}
-			#wrap{
-				height:200%;
+			#Sky{
+				height:140%;
 				width:100%;
 				overflow:hidden;
 				scroll:none;
@@ -30,16 +30,24 @@
 				z-index:9;
 				transition:2s;
 			}
-			/*#ground{
+			#ground{
 				width:100%;
-				height:50%;
-				top:50%;
-				background-color:black;
+				height:30%;
+				top:70%;
+				background-color:Brown;
 				position:absolute;
-				z-index:999;
+				z-index:998;
 				opacity:1;
 				transition:.3s;
-			}*/
+			}
+			#Top{
+				position:relative;
+				width:100%;
+				height:15%;
+				top:0%;
+				z-index:999;
+				background-color:Green;
+			}
 			#but{
 				height:60px;
 				width:200px;
@@ -73,14 +81,16 @@
 		<title>What's the Time?</title>
 	</head>
 	<body>
-		<div id="wrap">
+		<div id="Sky">
 			<div id="sun"></div>
-			<!--<div id="ground"></div>-->
 			<div id="but">
 				<!--<div id="white">
 				</div>
 				<p>Hover on Me!</p>-->
 			</div>
+		</div>
+		<div id="ground">
+		<div id="Top"></div>
 		</div>
 	</body>
 	<script>
@@ -89,7 +99,7 @@
 //			alert(position.coords.latitude);
 //		}
 		
-		var Sun1=new Sun("#sun", "#wrap", 2);
+		var Sun1=new Sun("#sun", "#Sky", 2);
 		Sun1.SunMove(2);
 		$("#sun").click(function(){
 			var tim=prompt("Time").toLowerCase();
